# research_index_backend

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  create_graph.py  environment.yaml  optimus.ipynb  pyproject.toml  readme.md
.github/workflows/: python-package.yml
data/: countries.csv
data/init/: authors.csv  partner_members.csv  project_partners.csv  readme.md  roles.csv  subws.csv  workstream.csv  wp_members.csv
notebooks/: OpenAire Demo.ipynb  cleaning.ipynb  crossref.ipynb  nlp.ipynb  summary.ipynb  transformer.ipynb
src/research_index_backend/: __init__.py  config.py  create_graph.py  create_graph_from_doi.py  doi.py  get_metadata.py  models.py  optimus.py  parser.py  session.py  utils.py
src/research_index_backend/core/: config.py
src/research_index_backend/db/: session.py
tests/: test_dois.py  test_metadata.py  test_parser.py  test_utilities.py  test_validate_doi.py
tests/fixtures/: authors.json  openaire_v2.json  openaire_v2_simple.json  zenodo.json
